--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -25,6 +26,39 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=Your API key&lang=en_US" type="text/javascript">
+    </script>
+    <script type="text/javascript">
+      ymaps.ready(init);
+      ymaps.ready(init1);
+      function init(){
+        var myMap = new ymaps.Map("map", {
+          center: [40.380517, 44.396590],
+          zoom: 12
+        });
+        var myPlacemark = new ymaps.Placemark([40.380517, 44.396590], {
+          // Custom properties for the marker
+          balloonContent: 'Default Marker'
+        });
+
+        // Add the marker to the map
+        myMap.geoObjects.add(myPlacemark);
+      }
+      function init1(){
+        var myMap1 = new ymaps.Map("map1", {
+          center: [40.193159, 44.5873046],
+          zoom: 12
+        });
+        // Create a default marker (placemark)
+        var myPlacemark1 = new ymaps.Placemark([40.193159, 44.5873046], {
+          // Custom properties for the marker
+          balloonContent: 'Default Marker'
+        });
+
+        // Add the marker to the map
+        myMap1.geoObjects.add(myPlacemark1);
+      }
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
